engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__task_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5328
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem Only   Plugins                                                          "
"  migr                                                                                              "
"› Review database migration  /workspace/project                                               Task  "
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @migr                                                                                             "
"                                                                                                    "
"                                                                                 100% context left  "
